--- a/examples/more/index.html
+++ b/examples/more/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>More example</title>
-  </head>
-  <body>
-    <script src="/__build__/more.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>More example</title>
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
+  <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/nprogress@0.2.0/nprogress.css">
+</head>
+<body>
+<h1>file download</h1>
+<div>
+  <button id="download" class="btn btn-primary">Download</button>
+</div>
+<h1>file upload</h1>
+<form role="form" class="form" onsubmit="return false;">
+  <input id="file" type="file" class="form-control"/>
+  <button id="upload" type="button" class="btn btn-primary">Upload</button>
+</form>
+
+<script src="/__build__/more.js"></script>
+</body>
 </html>
